Work on BMP activity

--- a/config/apprendre/_static/style.css
+++ b/config/apprendre/_static/style.css
@@ -236,6 +236,13 @@ nav li.active > a.active {
     color: rgba(0, 0, 0, .65);
 }
 
+img.pixels {
+    image-rendering: pixelated;
+    border: 1px solid gray;
+    margin-left: 25%;
+    width: 50%;
+}
+
 /** Definitions for dark theme **/
 
 :root {
